feat: migrate functions and add endpoints to list request by acceptor and applicant
